templates/myapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: myapp
    image: apmaros/myapp:latest
    ports:
    - containerPort: 5050
      name: http-web-svc
