templates/myapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  selector:
    app.kubernetes.io/name: myapp
  ports:
    - name: http-web
      protocol: TCP
      port: 80
      targetPort: envoy-web
    - name: admin
      protocol: TCP
      port: 81
      targetPort: envoy-admin
