templates/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - name: sise
      image: learnk8s/app:1.0.0
      ports:
        - containerPort: 8080
